[gd_scene load_steps=3 format=3 uid="uid://bvgq4s58143o4"]

[ext_resource type="Script" path="res://scripts/objetInteractif/objet_interactif.gd" id="1_qtc64"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ba55d"]
radius = 64.0

[node name="ObjetInteractif" type="Node2D" node_paths=PackedStringArray("interactionArea") groups=["aspirable", "hookable"]]
script = ExtResource("1_qtc64")
interactionArea = NodePath("InteractionArea")
metadata/_edit_group_ = true

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_ba55d")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
